--- a/Day-46-48/style.scss
+++ b/Day-46-48/style.scss
@@ -45,3 +45,23 @@ html, body {
         color: green;
     }
 }
+
+
+.b48-1{
+    font-size: 2rem;
+}
+
+.third {
+    margin: 2rem;
+    button {
+        padding: 0.6rem 3rem;
+        font-size: 2rem;
+        cursor: pointer;
+        background: #383838;
+        color: whitesmoke;
+    }
+
+    .dones {
+        background: #107001;
+    }
+}
