--- a/Web Pages Design/Tripco/style.css
+++ b/Web Pages Design/Tripco/style.css
@@ -180,22 +180,25 @@ nav .right a:nth-child(2) {
 .section2 .top .right {
   color: rgb(111, 111, 111);
 }
-.section2 .bottom {
+.section2 .bottom2 {
   margin-top: 1.5rem;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  gap: 2rem;
+  flex-wrap: wrap;
 }
-.section2 .bottom .place {
+.section2 .bottom2 .place {
+  width: -moz-fit-content;
+  width: fit-content;
   position: relative;
 }
-.section2 .bottom .place .image {
+.section2 .bottom2 .place .image {
   width: 13rem;
   height: 15rem;
   border-radius: 1.5rem;
   overflow: hidden;
 }
-.section2 .bottom .place .image img {
+.section2 .bottom2 .place .image img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -203,7 +206,7 @@ nav .right a:nth-child(2) {
   -o-object-position: center;
      object-position: center;
 }
-.section2 .bottom .place .discount {
+.section2 .bottom2 .place .discount {
   position: absolute;
   top: 5%;
   right: 5%;
@@ -213,17 +216,17 @@ nav .right a:nth-child(2) {
   padding: 0.3rem 0.5rem;
   border-radius: 1rem;
 }
-.section2 .bottom .place .name {
+.section2 .bottom2 .place .name {
   margin: 0.8rem 0 0.4rem 0;
   font-weight: 600;
 }
-.section2 .bottom .place .location {
+.section2 .bottom2 .place .location {
   display: flex;
   align-items: center;
   gap: 0.5rem;
   color: gray;
 }
-.section2 .bottom .place .location i {
+.section2 .bottom2 .place .location i {
   font-size: 0.9rem;
   color: #15abc5;
 }/*# sourceMappingURL=style.css.map */
