--- a/Web Pages Design/Tripco/style.scss
+++ b/Web Pages Design/Tripco/style.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  user-select: none;
 }
 
 html,
@@ -14,8 +15,7 @@ body {
 
 a {
   text-decoration: none;
-    color: rgb(155, 160, 164);
-
+  color: rgb(155, 160, 164);
 }
 
 nav {
@@ -123,141 +123,482 @@ nav {
     filter: drop-shadow(3px 8px 5px rgba(92, 92, 92, 0.326));
     top: 84%;
     .inner-top {
-        width: 100%;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .left {
         display: flex;
-        justify-content: space-between;
+        gap: 2rem;
+
+        a:nth-child(1) {
+          color: black;
+          font-weight: 600;
+        }
+      }
+
+      .right {
+        display: flex;
         align-items: center;
-
-        .left {
-            display: flex;
-            gap: 2rem;
-
-            a:nth-child(1) {
-                color: black;
-                font-weight: 600;
-            }
-        }
-
-        .right {
-            display: flex;
-            align-items: center;
-            gap: 0.2rem;
-            color: gray;
-            font-size: 0.8rem;
-        }
+        gap: 0.2rem;
+        color: gray;
+        font-size: 0.8rem;
+      }
     }
 
     hr {
-        margin: 0.8rem 0;
+      margin: 0.8rem 0;
     }
     .inner-bottom {
-        width: 100%;
-        .upper{
-            display: flex;
-            gap: 8rem;
+      width: 100%;
+      .upper {
+        display: flex;
+        gap: 8rem;
+      }
+      .down {
+        margin-top: 0.8rem;
+        display: flex;
+        margin-left: 0.8rem;
+        gap: 4rem;
+
+        .down-parts {
+          display: flex;
+          align-items: center;
+          gap: 0.5rem;
+          background: #e5e5e5;
+          padding: 0.5rem 0.9rem;
+          font-size: 0.9rem;
+          border-radius: 0.4rem;
+
+          i {
+            color: #15abc5;
+          }
         }
-        .down {
-            margin-top: 0.8rem;
-            display: flex;
-            margin-left: 0.8rem;
-            gap: 4rem;
 
-
-            .down-parts{
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-                background: #e5e5e5;
-                padding: 0.5rem 0.9rem;
-                font-size: 0.9rem;
-                border-radius: 0.4rem;
-
-                i {
-                    color:#15abc5;
-                }
-            }
-
-            .search{
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-                background: #15b6d2;
-                color: white;
-                padding: 0.3rem 1rem;
-                border-radius: 0.6rem;
-                margin-left: 11%;
-                cursor: pointer;
-            }
+        .search {
+          display: flex;
+          align-items: center;
+          gap: 0.5rem;
+          background: #15b6d2;
+          color: white;
+          padding: 0.3rem 1rem;
+          border-radius: 0.6rem;
+          margin-left: 11%;
+          cursor: pointer;
         }
+      }
     }
   }
 }
 
-.section2{
+.section2 {
+  width: 100%;
+  margin-top: 12rem;
+  .top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .left {
+      p:nth-child(1) {
+        font-size: 2.3rem;
+        font-weight: 600;
+      }
+    }
+    .right {
+      color: rgb(111, 111, 111);
+    }
+  }
+  .bottom2 {
+    margin-top: 1.5rem;
     width: 100%;
-    margin-top: 12rem;
-    .top {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .place {
+      width: 13rem;
+      position: relative;
+      .image {
+        width: 13rem;
+        height: 15rem;
+        border-radius: 1.5rem;
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: center;
+        }
+      }
+      .discount {
+        position: absolute;
+        top: 5%;
+        right: 5%;
+        font-size: 0.8rem;
+        font-weight: 600;
+        background: rgb(248, 248, 248);
+        padding: 0.3rem 0.5rem;
+        border-radius: 1rem;
+      }
+      .name {
+        margin: 0.8rem 0 0.4rem 0;
+        font-weight: 600;
+      }
+      .location {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        color: gray;
+        i {
+          font-size: 0.9rem;
+          color: #15abc5;
+        }
+      }
+    }
+  }
+}
+
+.section3 {
+  margin-top: 8rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .text3 {
+    text-align: center;
+    width: 100%;
+
+    p:nth-child(1) {
+      font-size: 4rem;
+      font-weight: 600;
+    }
+    p:nth-child(2) {
+      font-size: 1.2rem;
+      color: grey;
+    }
+  }
+
+  .bottom3 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 2.5rem 0;
+    width: 95%;
+
+    .left3 {
+      width: 30%;
+
+      .num3 {
+        width: fit-content;
+        padding: 0.1rem 0.8rem;
+        border-radius: 0.3rem;
+        margin: 1.5rem 0;
+        font-weight: 600;
+        color: white;
+      }
+      .n-1{
+        background: #15b6d2;
+      }
+      .n-2{
+        background: #879ADF;
+      }
+      .n-3{
+        background: #51C378;
+      }
+      .sub3 {
+        font-size: 1.2rem;
+        font-weight: 600;
+        margin-bottom: 0.5rem;
+      }
+      .info3 {
+        color: gray;
+      }
+
+      .btn3 {
+        margin-top: 2rem;
+        background: #15b6d2;
+        width: fit-content;
+        padding: 0.5rem 0.7rem;
+        color: white;
+        border-radius: 0.3rem;
+        cursor: pointer;
+        filter: drop-shadow(3px 5px 3px rgba(83, 83, 83, 0.362));
+        transition: all 0.4s ease-in-out;
+      }
+      .btn3:hover {
+        background: #14a5bf;
+      }
+      .btn3:active {
+        scale: 0.95;
+      }
+    }
+    .right3 {
+      width: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+
+      .image3 {
+        width: 25rem;
+        height: 35rem;
+        border-radius: 1.5rem;
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: center;
+        }
+      }
+
+      .user-card {
+        position: absolute;
+        background: rgb(237, 239, 241);
+        padding: 0.5rem 0.9rem;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        border-radius: 0.8rem;
+        .dp {
+          width: 2.5rem;
+          height: 2.5rem;
+          border-radius: 50%;
+          overflow: hidden;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: top;
+          }
+        }
+        .rating {
+          display: flex;
+          gap: 0.5rem;
+          align-items: center;
+
+          i {
+            color: goldenrod;
+            filter: drop-shadow(1.2px 1.5px 1px rgba(35, 35, 35, 0.745));
+          }
+        }
+      }
+      .card1 {
+        left: 2%;
+        top: 15%;
+      }
+      .card2 {
+        left: 2%;
+        bottom: 15%;
+      }
+      .card3 {
+        right: 8%;
+        bottom: 50%;
+      }
+    }
+  }
+}
+
+.section4 {
+  width: 100%;
+  margin: 7rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  .text4 {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .left4 {
+      h3 {
+        font-size: 5rem;
+      }
+      p {
+        margin-left: 0.5rem;
+        font-size: 1.2rem;
+      }
+    }
+    .right4 {
+      color: gray;
+    }
+  }
+
+  .selectDiv {
+    width: 95%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1rem;
+
+    .options {
+      display: flex;
+      gap: 2rem;
+
+      p {
+        background: rgb(236, 236, 236);
+        padding: 0.25rem 0.56rem;
+        border-radius: 0.3rem;
+        cursor: pointer;
+        transition: all 0.3s ease;
+      }
+      p:nth-child(1),
+      p:active {
+        background: #000;
+        color: white;
+      }
+    }
+    .filter {
+      display: flex;
+      gap: 0.8rem;
+      background: rgb(236, 236, 236);
+      padding: 0.25rem 0.56rem;
+      border-radius: 0.3rem;
+      cursor: pointer;
+    }
+  }
+
+  .placesDiv4 {
+    width: 96%;
+    margin-top: 2rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: space-between;
+    align-items: center;
+    // flex-wrap: wrap;
+
+    .place4 {
+      position: relative;
+      width: 19rem;
+      .image4 {
+        width: 19rem;
+        height: 13rem;
+        // border: 2px solid red;
+        border-radius: 1.5rem;
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: center;
+        }
+      }
+      .rating4 {
+        position: absolute;
+        top: 5%;
+        right: 4%;
+        display: flex;
+        gap: 0.3rem;
+        background: #e3e3e3;
+        width: fit-content;
+        padding: 0.2rem 0.5rem;
+        border-radius: 0.4rem;
+        font-size: 0.8rem;
+
+        i {
+          color: goldenrod;
+        }
+      }
+
+      .info4 {
+        width: 95%;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        margin: 1rem 0;
+        .spotInfo4 {
+          width: 65%;
+          .name4 {
+            font-weight: 600;
+            font-size: 1.1rem;
+          }
+          .location4 {
+            display: flex;
+            gap: 0.4rem;
+            align-items: center;
 
-        .left {
-            p:nth-child(1) {
-                font-size: 2.3rem;
-                font-weight: 600;
+            i {
+              font-size: 0.8rem;
+              color: #15abc5;
             }
+            p {
+              font-size: 0.9rem;
+            }
+          }
         }
-        .right {
-            color: rgb(111, 111, 111);
+        .price4 span {
+          font-weight: 600;
         }
+      }
     }
-    .bottom2{
-        margin-top: 1.5rem;
+  }
+
+  .more4 {
+    border: 2px solid black;
+    padding: 0.9rem 1.6rem;
+    border-radius: 2rem;
+    cursor: pointer;
+    font-weight: 600;
+  }
+  .more4:active {
+    scale: 0.9;
+  }
+}
+
+.section5 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .text5 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h3{
+        font-size: 3.8rem;
+    }
+    p{
+        font-size: 1.3rem;
+        color: gray;
+    }
+  }
+
+  .staps{
+    width: 60rem;
+    height: 21rem;
+    margin-top: 2rem;
+
+    img{
         width: 100%;
-        display: flex;
-        gap: 2rem;
-        flex-wrap: wrap;
-        .place {
-            width: fit-content;
-            position: relative;
-            .image {
-                width: 13rem;
-                height: 15rem;
-                border-radius: 1.5rem;
-                overflow: hidden;
-
-                img{
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    object-position: center;
-
-                }
-            }
-            .discount{
-                position: absolute;
-                top: 5%;
-                right: 5%;
-                font-size: 0.8rem;
-                font-weight: 600;
-                background: rgb(248, 248, 248);
-                padding: 0.3rem 0.5rem;
-                border-radius: 1rem;
-            }
-            .name {
-                margin: 0.8rem 0 0.4rem 0;
-                font-weight: 600;
-            }
-            .location{
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-                color: gray;
-                i {
-                    font-size: 0.9rem;
-                    color: #15abc5;
-                }
-            }
-        }
+        height: 100%;
+        object-fit: cover;
+        object-position: 0% 39%;
     }
+  }
+  .arrows{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    margin: 1rem 0;
+
+    i {
+        font-size: 1.2rem;
+        cursor: pointer;
+    }
+    .right-arrow {
+        border: 2px solid black;
+        border-radius: 50%;
+        padding: 0.3rem;
+    }
+  }
 }
